--- a/W1734/.classpath
+++ b/W1734/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_79"/>
 	<classpathentry kind="lib" path="F:/编程工具类/spring/mysql-connector-java-5.1.13-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/Desktop/教学/学生资料/移动开发W1734/教学资料/W1734/c3p0-0.9.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/Desktop/教学/学生资料/移动开发W1734/教学资料/W1734/mchange-commons-0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
